exerices privilages
